Bug 358894 - File tooltips cover context menu
Summary: File tooltips cover context menu
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-01 21:31 UTC by Kai Uwe Broulik
Modified: 2016-02-18 21:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2016-02-01 21:31:33 UTC
When hovering a file and immediately right-clicking it, the context menu opens and shortly thereafter its tooltip appears covering the menu.

Reproducible: Always

Steps to Reproduce:
1. Hover a file
2. Quickly press right mouse button
3.

Actual Results:  
Context menu opens and tooltip opens shortly thereafter covering the menu

Expected Results:  
Context menu opens but no tooltip
Comment 1 Kai Uwe Broulik 2016-02-01 22:05:38 UTC
In any case I think the tooltips should, when in the list popup, be displayed left/right of the item, like system tray does it.
Comment 2 Marco Martin 2016-02-04 12:59:50 UTC
easy to reproduce
Comment 3 Eike Hein 2016-02-10 12:12:30 UTC
Git commit f6acdf977bdbae191ab4d349f1a246fb63f9c823 by Eike Hein.
Committed on 10/02/2016 at 12:10.
Pushed by hein into branch 'Plasma/5.5'.

Do tooltip location for panel popups a la systray.

M  +1    -1    containments/desktop/package/contents/ui/FolderItemDelegate.qml

http://commits.kde.org/plasma-desktop/f6acdf977bdbae191ab4d349f1a246fb63f9c823
Comment 4 Kai Uwe Broulik 2016-02-11 09:50:59 UTC
Fixed by https://quickgit.kde.org/?p=plasma-desktop.git&a=commit&h=017a1c426baf27c8a7e028fac9df142aeaf9fa6b

(You forgot the space between BUG: and the number)
Comment 5 Kai Uwe Broulik 2016-02-16 22:37:00 UTC
This patch does not prevent the tooltip from appearing if I open the context menu before it showed up.
Comment 6 Eike Hein 2016-02-17 11:43:53 UTC
You'll have to look into it on your end then - I can't actually reproduce this problem at all (with the context menu open I get no tooltip, and if the tooltip is already open, opening the context menu closes it) so this was more a shot in the blue based on the same code in Task Manager. But looking at the implementation of TooltipArea, I guess a hide call doesn't cancel the show timer.
Comment 7 Kai Uwe Broulik 2016-02-18 21:01:00 UTC
Git commit eccf7cf0b22c170c0f642c3ae376a3e3ff600b91 by Kai Uwe Broulik.
Committed on 18/02/2016 at 20:58.
Pushed by broulik into branch 'master'.

[ToolTip] Stop show timer if hideTooltip is called

This prevents the tooltip from showing up if hideTooltip was called
before it was shown.

Differential Revision: https://phabricator.kde.org/D959

M  +1    -0    src/declarativeimports/core/tooltip.cpp

http://commits.kde.org/plasma-framework/eccf7cf0b22c170c0f642c3ae376a3e3ff600b91